# VecLucene

./: Dockerfile  Makefile  README.md  main.py  pyproject-gpt.toml  pyproject.toml  pytest.ini
example/: cli.py
index/: docs.py  index.py  vector_index.py
model/: factory.py  model.py
model/providers/: openai_embedding.py  sentence_transformer_model.py
server/: api.py  server.py
tests/index/: test_index.py  test_vector_index.py
tests/model/: test_sentence_transformer.py
tests/openai/: test_index.py  test_model_embedding.py
tests/testfiles/: chatgpt.txt  download.py  single_sentence.txt  whitespaces.txt
tests/vectorstore/: test_hnswlib.py
vectorstore/: factory.py  vectorstore.py
vectorstore/providers/: hnswlib_store.py
