[tool.poetry]
name = "veclucene"
version = "0.1.0"
description = ""
authors = ["Jun Luo <luo.junius@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.1"
uvicorn = "^0.22.0"
openai = "^0.27.6"
pydantic = "^1.10.7"
tenacity = "^8.2.2"
tiktoken = "^0.3.3"
numpy = "^1.24.3"
sentence-transformers = "^2.2.2"
hnswlib = "^0.7.0"
requests = "^2.30.0"
argparse = "^1.4.0"
python-multipart = "^0.0.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
